<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="Acquisition_Control" Id="{99888313-b0de-42cf-b20d-4356e912c615}">
    <Declaration><![CDATA[TYPE Acquisition_Control :
STRUCT
	Acquistion_Trigger_Enable : BIT;
	Acquistion_Trigger : BIT;
	Clear_Exposure_Complete : BIT;
	Set_Offline : BIT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>