<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="S_Acquistion" Id="{b9cb6b81-2a57-4fd3-907d-73836cfa9db1}">
    <Declaration><![CDATA[TYPE S_Acquistion :
STRUCT
	// Control
	TriggerEnabel AT %Q* : BOOL;
	Trigger AT %Q* : BOOL;
	ClearExposure AT %Q* : BOOL;
	SetOffline AT %Q* : BOOL;
	
	// satus
	TriggerReady AT %I* : BOOL;
	TriggerAck AT %I* : BOOL;
	ExposureComplete AT %I* : BOOL;
	MissedAck AT %I* : BOOL;
	// TODO Offline Reason omvormen van BIT's naar UINT
	OfflineReason0 AT %I* : BOOL;
	OfflineReason1 AT %I* : BOOL;
	OfflineReason2 AT %I* : BOOL;
	OfflineReason : UINT;
	
	Online AT %I* : BOOL;
	AcquisitionID AT %I* : UINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>