<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="Camera_Trigger" Id="{ad000b63-df7b-425c-bc71-b905122b4615}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION Camera_Trigger : Trigger_Error
VAR_IN_OUT
	Camera : Cognex_Camera;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF Camera.CameraState = Camera_State.Idel THEN
	IF Camera.AcquisitionStatusRegister.Acquisition_Trigger_Ready THEN
		Camera.AcquisitionControl.Clear_Exposure_Complete := TRUE;
		Camera.AcquisitionControl.Acquistion_Trigger := TRUE;
		Camera.CameraState := Camera_State.Jope_Running;
		Camera.JobeState := Job_State.TriggerAck;
		Camera_Trigger := Trigger_Error.None;
	ELSE
		Camera_Trigger := Trigger_Error.Camera_Not_Trigger_Redy;
	END_IF
ELSE
	Camera_Trigger := Trigger_Error.Camera_Busy;
	RETURN;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="Camera_Trigger">
      <LineId Id="7" Count="0" />
      <LineId Id="37" Count="0" />
      <LineId Id="40" Count="3" />
      <LineId Id="38" Count="0" />
      <LineId Id="44" Count="1" />
      <LineId Id="39" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="16" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>